# VSGdemo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile.bat  config.h.in
demos/Getting_started/: CMakeLists.txt
demos/Getting_started/Hello_triangle/: CMakeLists.txt  vsgTriangle.cpp  vsgTriangleColored.cpp  vsgTriangle_indexed.cpp
demos/Getting_started/shader/: CMakeLists.txt  vsgPushConstant.cpp
demos/Getting_started/textures/: CMakeLists.txt  vsgTextures.cpp
demos/Getting_started/window/: CMakeLists.txt  vsgWindow.cpp
demos/Getting_started/windows/: CMakeLists.txt  vsgWindows.cpp
resources/: readme.txt
